pdf generete avec json data, footer and aboutcar update

--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@
   --home-social-icons-hover-color: #20879e;
   --icon-color: #0c7086;
   --footer-background-color: rgb(39, 52, 78);
-  --blockquote-footer-color: #88c0a5;
+  --blockquote-footer-color: #50bef4;
   --project-card-box-shadow-color: rgba(53, 119, 136, 0.459);
   --project-card-hover-box-shadow-color: rgba(72, 129, 144, 0.561);
   --blog-card-box-shadow-color: rgba(77, 145, 161, 0.459);
